# uno_game

./: .gitignore  CMakeLists.txt  README.md
Uno/Uno/: main.cpp
Uno/Uno.xcodeproj/: project.pbxproj
Uno/Uno.xcodeproj/project.xcworkspace/xcuserdata/alicemazzoleni.xcuserdatad/: UserInterfaceState.xcuserstate
doc/: server_api.txt
include/client/: digital_UNO.hpp  player.hpp  player_controller.hpp  player_state.hpp  tcp_client.hpp  tcp_client_old.hpp  tcp_client_other.hpp
include/client/UI/: ConnectionPanel.hpp  GameWindow.hpp  ImagePanel.hpp  InputField.hpp  MainGamePanel.hpp
include/common/: cards.hpp  common.hpp  logger.hpp  network.hpp  player.hpp  utils.hpp
include/server/: .game_state.hpp.swp  .tcp_server.hpp.swp  game_controller.hpp  game_state.hpp  player.hpp  tcp_server.hpp
src/: main.cpp
src/client/: digital_UNO.cpp  main.cpp  player.cpp  player_controller.cpp  player_state.cpp  tcp_client.cpp  tcp_client_old.cpp  tcp_client_other.cpp
src/client/UI/: ConnectionPanel.cpp  GameWindow.cpp  ImagePanel.cpp  InputField.cpp  MainGamePanel.cpp
src/common/: .logger.cpp.swp  cards.cpp  logger.cpp  network.cpp  player.cpp  player_state.cpp  utils.cpp
src/server/: game_controller.cpp  game_state.cpp  main.cpp  player.cpp  tcp_server.cpp
tests/: CMakeLists.txt
tests/client/: player_controller.cpp
tests/clienttest/: main.cpp
tests/commontest/: test_cards.cpp
tests/server/: game_state.cpp
tests/servertest/: test_game_controller.cpp
unit-tests/: CMakeLists.txt
unit-tests/clienttest/: main.cpp  test_player_controller.cpp
unit-tests/commontest/: test_cards.cpp
unit-tests/servertest/: tcp_server_client_connection_test.cpp  test_game_controller.cpp  test_serialization.cpp
